# stackspot-python-fastapi

./: README.md  stack.yaml
fastapi-plugin/: plugin.yaml
fastapi-plugin/snippets/: fastapi  pre-commit  pydantic  python-dotenv  uvicorn
fastapi-plugin/templates/: .gitignore  .pre-commit-config.yaml  Makefile
fastapi-plugin/templates/scripts/: server.sh
fastapi-plugin/templates/sources/: application.py  main.py  setting.py
fastapi-template/: template.yaml
fastapi-template/templates/: pyproject.toml
stackfiles/: create.yaml
